<resources>
    <string name="app_name">P Touch Printer Control</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_update_firm">Update Firm</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_get_firmver">Get Firm Version</string>
    <string name="button_get_mediaver">Get Media Version</string>
    <string name="button_get_serialnum">Get Serial Number</string>
    <string name="button_send_mediainfo">Send Media Info</string>
    <string name="button_check_firm_file">Check Firm File Ver</string>
    <string name="button_check_media_file">Check Media File Ver</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="supported_device" translatable="false">PJ-7XX/RJ-4030Ai/RJ-2XXX</string>
    <string name="mw_series" translatable="false">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="button_send_binfile">Send File</string>
    <string name="button_multi_print">Multi Print</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="trim_tape_after_data_title" translatable="false">Cutting zero lines </string>
    <string name="trim_tape_after_data_value" translatable="false">Select the cutting zero lines</string>
    <string name="tethering_title">Tethering</string>
    <string name="tethering_value">Select the tethering</string>
    <string name="number_of_copies_title">Number of copies</string>
    <string name="number_of_copies_value">Set the number of copies </string>
    <string name="halftoning_title">Half toning</string>
    <string name="halftoning_value">Select the half toning method </string>
    <string name="overwrite_title">Overwrite the file</string>
    <string name="overwrite_value">Select the overwrite mode </string>
    <string name="image_thresholding_title">Threshold of simple binary</string>
    <string name="image_thresholding_value">Select the threshold </string>
    <string name="scale_value_title">Scale value</string>
    <string name="scale_value_value">Select the scale value </string>
    <string name="fit_to_page_title">Fit to page</string>
    <string name="fit_to_page_value">Select if fitting to page </string>
    <string name="is_carbon_title" translatable="false">Carbon</string>
    <string name="is_carbon_value">Select the carbon</string>
    <string name="pj_density_title">PJ Density</string>
    <string name="pj_density_value">Select the PJ density</string>
    <string name="mode9_title">Mode9</string>
    <string name="mode9_value">Select the Mode9</string>
    <string name="pj_speed_title">PJ Speed</string>
    <string name="pj_speed_value">Select the PJ speed</string>
    <string name="printer_case_title">Printer case</string>
    <string name="printer_case_value">Select the printer case</string>
    <string name="print_quality_title">Print quality</string>
    <string-array name="print_quality_value">
        <item>LOW_RESOLUTION</item>
        <item>NORMAL</item>
        <item>DOUBLE_SPEED</item>
        <item>HIGH_RESOLUTION</item>
    </string-array>
    <string name="is_skip_status_check_title">Skip Status Check</string>
    <string name="is_skip_status_check_value">Select Skip Status Check mode</string>
    <string name="check_print_end_title">Check the print end</string>
    <string name="check_print_end_value">Check the print end</string>
    <string name="feed_mode_title">Feed mode</string>
    <string name="feed_mode_value">Select how to feed paper</string>
    <string name="pj_paper_kind_title">Paper Kind</string>
    <string name="pj_paper_kind_value">Select paper kind</string>
    <string name="align_title">Align</string>
    <string name="align_value">Select the align</string>
    <string name="paper_pos_title">Paper Position</string>
    <string name="paper_pos_value">Select the Paper Position</string>
    <string name="valign_title" translatable="false">Valign</string>
    <string name="valign_value" translatable="false">Select the valign</string>
    <string name="left_margin_title">Left margin</string>
    <string name="left_margin_value">Set the left margin </string>
    <string name="top_margin_title">Top margin</string>
    <string name="top_margin_value">Set the top margin </string>
    <string name="custom_paper_width_title">Custom Paper Width</string>
    <string name="custom_paper_width_value">Set the Width of custom Paper </string>
    <string name="custom_paper_length_title">Custom Paper Length</string>
    <string name="custom_paper_length_value">Set the Length of custom Paper </string>
    <string name="custom_setting_title">Custom Setting</string>
    <string name="custom_setting_value">Select a custom setting file</string>
    <string name="custom_feed_title">Feed Paper Setting</string>
    <string name="custom_feed_value">Set Length of Feeding Paper</string>
    <string name="rj_density_title">Density</string>
    <string name="rj_density_value">Select density</string>
    <string name="is_rotate180_title">Rotate 180</string>
    <string name="is_rotate180_value">Rotate 180</string>
    <string name="dash_line_title" translatable="false">Dash Line Print</string>
    <string name="dash_line_value" translatable="false">Dash Line Print</string>
    <string name="is_end_cut_title">End Cut</string>
    <string name="is_end_cut_value">do end cut or not</string>
    <string name="is_auto_cut_title">Auto Cut</string>
    <string name="is_auto_cut_value">do auto cut or not</string>
    <string name="is_peel_mode_title">PeelMode</string>
    <string name="is_peel_mode_value">Wait for peeling label</string>
    <string name="otherSettings_title">Other Settings</string>
    <string name="ip_mac_title">IP/MAC Address</string>
    <string name="ip_mac_value">Set the IP/MAC Address</string>
    <string name="alignment_settings_title">Alignment Settings</string>
    <string name="alignment_settings_value">Set the Alignment Settings</string>
    <string name="pj_settings_title">PJ Settings</string>
    <string name="pj_settings_value">Set the PJ Settings</string>
    <string name="pj_td_settings_title">RJ/TD Settings</string>
    <string name="pj_td_settings_value">Set the RJ/TD Settings</string>
    <string name="cut_settings_value">Set the Cut Settings</string>
    <string name="cut_settings_title">Cut Settings</string>
    <string name="cutSettingsPT_P3_value">Set the Cut Settings</string>
    <string name="cutSettingsPT_P3_title">PT-P3 Cut Settings</string>
    <string name="text_printer_power_off_time">	Auto Power Off	</string>
    <string name="text_printer_power_off_time_battery">	Auto Power Off(Li-ion)	</string>
    <string name="text_print_jpeg_halftone">	JPEG Printing Halftone(BT/USB)	</string>
    <string name="text_print_jpeg_scale">	JPEG Printing Scale(BT/USB)	</string>
    <string name="text_print_speed">	Print Speed(BT/USB)	</string>
    <string name="text_print_density">	Print Density(BT/USB)	</string>
    <string name="text_bt_isdiscoverable">	Visible to Other Devices(BT/USB)	</string>
    <string name="text_bt_devicename">	Bluetooth Device Name(BT/USB)	</string>
    <string name="text_bt_auto_connection">Bluetooth Auto Connection(BT/USB)</string>
    <string name="text_bt_bootmode" translatable="false">	Bluetooth on Power On(BT/USB)	</string>
    <string name="text_bluetooth_setting">Bluetooth settings</string>
    <string name="half_cut_title">Half Cut(PT Only)</string>
    <string name="half_cut_value">do half cut or not</string>
    <string name="special_tape_title" translatable="false">Special tape paper(PT Only)</string>
    <string name="special_tape_value" translatable="false">is special tape paper</string>
    <string name="cut_mark_title" translatable="false">Cut Mark</string>
    <string name="cut_mark_value" translatable="false">do cut mark or not</string>
    <string name="label_margin_title" translatable="false">Mergine</string>
    <string name="label_margin_value" translatable="false">Select Mergine</string>
    <string name="save_prn_path_title">Save prn file</string>
    <string name="save_prn_path_text">Select the destination</string>
    <string name="raw_mode_title">Raw mode</string>
    <string name="raw_mode_value">Select the raw mode</string>
    <string name="soft_focusing_title" translatable="false">Lighter</string>
    <string name="soft_focusing_value" translatable="false">Select the lighter</string>
    <string name="timeout_title">Timeout</string>
    <string name="timeout_text">Set the timeout </string>
    <string name="processTimeout_value">Time-out period</string>
    <string name="processTimeout_title">Set overall time-out time </string>
    <string name="sendTimeout_value" translatable="false">Set transmission waiting time</string>
    <string name="sendTimeout_title" translatable="false">Transmission waiting time</string>
    <string name="receiveTimeout_title" translatable="false">Reception waiting time</string>
    <string name="receiveTimeout_value" translatable="false">Set reception waiting time </string>
    <string name="connectionTimeout_title">Connect waiting time</string>
    <string name="connectionTimeout_value">Set connect waiting time </string>
    <string name="close_wait_time_value" translatable="false">Close Time-out period</string>
    <string name="close_wait_time_title" translatable="false">Set close waiting time</string>
    <string name="work_path_value" translatable="false">Select the work path</string>
    <string name="work_path_title">Work Folder</string>
</resources>